tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__random__test__emit_random_codegen@pre-mem2reg@llvm21_2.snap
---
source: tket-qsystem/src/llvm/random.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal { double, {} } @_hl.main.1({} %0) !dbg !3 {
alloca_block:
  %"0" = alloca double, align 8
  %"1" = alloca {}, align 8
  %"2_0" = alloca {}, align 8
  %"4_0" = alloca double, align 8
  %"4_1" = alloca {}, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store {} %0, ptr %"2_0", align 1
  %"2_01" = load {}, ptr %"2_0", align 1
  %rfloat = call double @random_float(), !dbg !12
  store double %rfloat, ptr %"4_0", align 8, !dbg !12
  store {} zeroinitializer, ptr %"4_1", align 1, !dbg !12
  %"4_02" = load double, ptr %"4_0", align 8
  %"4_13" = load {}, ptr %"4_1", align 1
  store double %"4_02", ptr %"0", align 8
  store {} %"4_13", ptr %"1", align 1
  %"04" = load double, ptr %"0", align 8
  %"15" = load {}, ptr %"1", align 1
  %mrv = insertvalue { double, {} } poison, double %"04", 0
  %mrv6 = insertvalue { double, {} } %mrv, {} %"15", 1
  ret { double, {} } %mrv6
}

declare double @random_float()

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/lPNzlV/ClAphFG/yrhvZs/eDgUn/eIVwAutKJHaZEPSZwPXPeycUvnujGxZ")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !10}
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ double, {} }", file: !2, size: 8, align: 8, elements: !8)
!8 = !{!9, !10}
!9 = !DIBasicType(name: "f64", size: 64, encoding: DW_ATE_float)
!10 = !DICompositeType(tag: DW_TAG_structure_type, name: "{}", file: !2, align: 8, elements: !11)
!11 = !{}
!12 = !DILocation(line: 27062, column: 402, scope: !3)
