tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__random__test__emit_random_codegen@pre-mem2reg@llvm21_3.snap
---
source: tket-qsystem/src/llvm/random.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal { i32, {} } @_hl.main.1({} %0, i32 %1) !dbg !3 {
alloca_block:
  %"0" = alloca i32, align 4
  %"1" = alloca {}, align 8
  %"2_0" = alloca {}, align 8
  %"2_1" = alloca i32, align 4
  %"4_0" = alloca i32, align 4
  %"4_1" = alloca {}, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store {} %0, ptr %"2_0", align 1
  store i32 %1, ptr %"2_1", align 4
  %"2_01" = load {}, ptr %"2_0", align 1
  %"2_12" = load i32, ptr %"2_1", align 4
  %rintb = call i32 @random_rng(i32 %"2_12"), !dbg !12
  store i32 %rintb, ptr %"4_0", align 4, !dbg !12
  store {} zeroinitializer, ptr %"4_1", align 1, !dbg !12
  %"4_03" = load i32, ptr %"4_0", align 4
  %"4_14" = load {}, ptr %"4_1", align 1
  store i32 %"4_03", ptr %"0", align 4
  store {} %"4_14", ptr %"1", align 1
  %"05" = load i32, ptr %"0", align 4
  %"16" = load {}, ptr %"1", align 1
  %mrv = insertvalue { i32, {} } poison, i32 %"05", 0
  %mrv7 = insertvalue { i32, {} } %mrv, {} %"16", 1
  ret { i32, {} } %mrv7
}

declare i32 @random_rng(i32)

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/lPNzlV/ClAphFG/yrhvZs/eDgUn/eIVwAutKJHaZEPSZwPXPeycUvnujGxZ")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !10, !9}
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i32, {} }", file: !2, size: 4, align: 8, elements: !8)
!8 = !{!9, !10}
!9 = !DIBasicType(name: "i32", size: 32, encoding: DW_ATE_unsigned)
!10 = !DICompositeType(tag: DW_TAG_structure_type, name: "{}", file: !2, align: 8, elements: !11)
!11 = !{}
!12 = !DILocation(line: 27062, column: 402, scope: !3)
